      that is when an operation would cause two different branches of 
      development for a single trove to end up with the same trailing label.
      Since most conary operations are label based, such label
      conflicts can be confusing to work with and are almost never
      desireable - except in those few cases where they are necessary.
      (CNY-796)

  o Bug Fixes:
    * Conary commands do not perform an unnecessary database checks on the
      local system. (CNY-571)
    * Fixed a bug that could allow conary to consider a noop update as an
      install (and could result in tracebacks in some situations). (CNY-845)
    * If you've made a local modification to a package and then try to
      downgrade it later, conary will downgrade included components as well.
      (CNY-805)
    * The error message produced by "cvc cook" when a source component
      exists on multiple branches with the same trailing label has
      been improved. (CNY-714)
    * Error handling when manipulating entitlements via XML-RPC has
      been improved. (CNY-692)
    * The usage message displayed when running "conary changeset" has
      been corrected. (CNY-864)

  o Optimizations
    * The getFileContents and getFileVersions server side calls have
      been optimized for faster execution
    * The SQL query in getTroveList has been sped up by a 3-5x factor.

  o Server Changes
    * Several SQL queries have been updated for PostgreSQL compatibility
    * dbstore now has support for executemany()

Changes in 1.0.30:
  o System Update Changes:
    These changes make Conary much more robust when applying updates
    that move files from one package to another.

    * Components that modify the same files are now required to be in
      the same update job.  For example, if a file moves from
      component a:runtime to component b:runtime, the erase of
      component a:runtime and the install of component b:runtime will
      occur at the same time. (CNY-758).